internal/gatewayapi/testdata/securitypolicy-with-oidc-invalid-secretref.in.yaml
secrets:
- apiVersion: v1
  kind: Secret
  metadata:
    namespace: envoy-gateway
    name: client2-secret
  data:
    client-secret: Y2xpZW50MTpzZWNyZXQK
- apiVersion: v1
  kind: Secret
  metadata:
    namespace: default
    name: client3-secret
  data:
    invalid_client_secret_key: Y2xpZW50MTpzZWNyZXQK

gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: default
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: default
    name: gateway-2
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: default
    name: gateway-3
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: default
    name: policy-non-exist-secretRef
    uid: b8284d0f-de82-4c65-b204-96a0d3f258a1
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
    oidc:
      provider:
        issuer: "https://accounts.google.com"
        authorizationEndpoint: "https://accounts.google.com/o/oauth2/v2/auth"
        tokenEndpoint: "https://oauth2.googleapis.com/token"
      clientID: "client1.apps.googleusercontent.com"
      clientSecret:
        name: "client1-secret"
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: default
    name: policy-no-referenceGrant
    uid: 08335a80-83ba-4592-888f-6ac0bba44ce4
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-2
    oidc:
      provider:
        issuer: "https://accounts.google.com"
        authorizationEndpoint: "https://accounts.google.com/o/oauth2/v2/auth"
        tokenEndpoint: "https://oauth2.googleapis.com/token"
      clientID: "client1.apps.googleusercontent.com"
      clientSecret:
        namespace: envoy-gateway
        name: "client2-secret"
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: default
    name: policy-no-client-secret-key
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-3
    oidc:
      provider:
        issuer: "https://accounts.google.com"
        authorizationEndpoint: "https://accounts.google.com/o/oauth2/v2/auth"
        tokenEndpoint: "https://oauth2.googleapis.com/token"
      clientID: "client1.apps.googleusercontent.com"
      clientSecret:
        namespace: default
        name: "client3-secret"
